--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,6 +1,18 @@
 .body_bg{
     background-color: #222D32;
 }
+a,
+a:link,
+a:visited,
+a:hover,
+a:active{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 .panel .panel-title{
     height: 40px;
     line-height: 40px;
@@ -10,4 +22,87 @@
 }
 .mt_150{
     margin-top: 150px;
+}
+.mt_20{
+    margin-top: 20px;
+}
+
+/*//侧边栏*/
+  .lt_aside{
+      width: 180px;
+      height: 100%;
+      position: fixed;
+      left: 0;
+      top: 0;
+      background-color: #222D32;
+      z-index: 999;
+  }
+
+.lt_aside .brand{
+    height: 50px;
+    width:100%;
+    line-height: 50px;
+    text-align: center;
+    font-size: 25px;
+    background-color: #367FA9;
+}
+
+.lt_aside .brand a{
+    color: #fff;
+    text-decoration: none;
+}
+.lt_aside .user{
+    padding-top:30px;
+    height: 180px;
+}
+.lt_aside .user img{
+    width: 80px;
+    height: 80px;
+    border-radius:50%;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+.lt_aside .user p {
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    color:#fff ;
+    font-size: 18px;
+}
+.lt_aside .nav a{
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 50px;
+    color: #fff;
+}
+.lt_aside .nav .child a {
+    padding-left: 60px;
+}
+
+.lt_aside .nav a.current{
+    background-color: #1d1f21;
+}
+.lt_main{
+    padding-left:180px ;
+    padding-top: 50px;
+}
+.lt_topbar{
+    width: 100%;
+    height: 50px;
+    background-color: #3C8DBC;
+    position: fixed;
+    left: 0;
+    top:0;
+    padding-left: 180px;
+}
+.lt_topbar a {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
 }
