首页-公共功能完成

--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -26,7 +26,9 @@ ul{
 .mt_20{
     margin-top: 20px;
 }
-
+.red{
+    color: red;
+}
 /*//侧边栏*/
   .lt_aside{
       width: 180px;
@@ -36,8 +38,11 @@ ul{
       top: 0;
       background-color: #222D32;
       z-index: 999;
+      transition: all 1s;
   }
-
+.lt_aside.hidemenu{
+    left: -180px;
+}
 .lt_aside .brand{
     height: 50px;
     width:100%;
@@ -88,6 +93,13 @@ ul{
 .lt_main{
     padding-left:180px ;
     padding-top: 50px;
+    transition: all 1s;
+}
+.lt_main.hidemenu{
+    padding-left: 0;
+}
+.lt_topbar.hidemenu{
+    padding: 0;
 }
 .lt_topbar{
     width: 100%;
@@ -97,6 +109,7 @@ ul{
     left: 0;
     top:0;
     padding-left: 180px;
+    transition: all 1s;
 }
 .lt_topbar a {
     width: 50px;
