--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -9,7 +9,7 @@ body{
 .lt_container{
     width: 100%;
     height: 100%;
-    background-color: pink;
+    background-color: white;
     max-width: 640px;
     min-width: 320px;
     margin: 0 auto;
@@ -42,7 +42,8 @@ body{
 .lt_main{
     width: 100%;
     height: 100%;
-    background-color: red;
+    /*background-color: red;*/
+    position: relative;
 }
 .lt_header .icon_left,
 .lt_header .icon_right{
@@ -64,6 +65,10 @@ body{
     margin: 0;
     padding: 0;
     list-style: none;
+}
+img {
+    width: 100%;
+    display: block;
 }
 .lt_header h3{
     height: 45px;
