--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -101,3 +101,61 @@ img {
 .lt_footer li a.currend p{
     color: orange;
 }
+
+/*公用的搜索框样式*/
+.lt_search{
+    padding: 10px;
+    position: relative;
+
+}
+.lt_search .search_input{
+    height: 34px;
+    line-height: 34px;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #007aff;
+    border-radius:5px;
+    padding-left: 15px;
+    padding-right:55px ;
+
+}
+
+.lt_search .seach_btn{
+    position: absolute;
+    right: 10px;
+    top:10px;
+    border-radius: 0 5px 5px 0;
+}
+
+/*公用的产品样式*/
+/*产品样式*/
+.lt_product {
+    padding: 10px;
+}
+.lt_product_item{
+    float: left;
+    width: 48%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.lt_product_item:nth-child(2n+1){
+    margin-right: 4%;
+}
+.lt_product_item .price {
+    color: red;
+}
+.lt_product_item .oldPrice {
+    text-decoration: line-through;
+}
+.lt_product_item img {
+    width: 150px;
+    height: 150px;
+    margin: 0  auto;
+}
+.lt_product_item .mui-ellipsis-2{
+
+    height: 40px;
+}
