--- a/public/front/css/searchList.css
+++ b/public/front/css/searchList.css
@@ -15,3 +15,22 @@
 .lt_sort a.current{
     color: orange;
 }
+.loading{
+    width: 50px;
+    height: 50px;
+    border: 3px solid #069;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 200px;
+    animation: rotate 1s infinite;
+}
+/*动画*/
+@keyframes rotate {
+    from{
+        transform:translateX(-50%) rotate(0deg);
+    }
+    to {
+        transform:translateX(-50%) rotate(360deg);
+    }
+}
