--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -159,3 +159,19 @@ img {
 
     height: 40px;
 }
+/*公共的尺码样式*/
+.lt_size span{
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    border: 1px solid #ccc;
+    display: inline-block;
+    font-size: 12px;
+    margin:  3px 3px;
+
+}
+.lt_size span.current {
+    background-color: orange;
+    color: #EFEFF4;
+}
